--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background:#9c2640;
+    background:rgb(72, 153, 207);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     align-items: center;
